<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rectangle_8"
    android:layout_gravity="center">
    <TextView
        android:id="@+id/how_was_you"
        android:layout_width="147dp"
        android:layout_height="22dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="98dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/nunito_sans_extrabold"
        android:text="@string/how_was_your_trip"
        android:textAppearance="@style/header"
        android:gravity="center_horizontal|top"
        />

    <TextView
        android:id="@+id/you_ve_been"
        android:layout_width="203dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="70dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/lato"
        android:text="You have been completed your trip with this detail"
        android:textAppearance="@style/mini_character"
        android:lineSpacingExtra="10sp"
        android:translationY="4.8sp"
        android:gravity="center_horizontal|top"
        />

    <TextView
        android:id="@+id/po_name"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="33dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/lato"
        android:text="PO Name"
        android:textAppearance="@style/mini_character"
        android:lineSpacingExtra="10sp"
        android:translationY="4.8sp"
        android:gravity="center_horizontal|top"
        />

    <TextView
        android:id="@+id/no_bus"
        android:layout_width="41dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="183dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/lato"
        android:text="No Bus"
        android:textAppearance="@style/mini_character"
        android:lineSpacingExtra="10sp"
        android:translationY="4.8sp"
        android:gravity="top"
        />

    <TextView
        android:id="@+id/departure_d"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="33dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="185dp"
        android:fontFamily="@font/lato"
        android:text="Departure Date"
        android:textAppearance="@style/mini_character"
        android:lineSpacingExtra="10sp"
        android:translationY="4.8sp"
        android:gravity="center_horizontal|top"
        />

    <TextView
        android:id="@+id/ticket_stat"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="182dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="185dp"
        android:fontFamily="@font/lato"
        android:text="Ticket Status"
        android:textAppearance="@style/mini_character"
        android:lineSpacingExtra="10sp"
        android:translationY="4.8sp"
        android:gravity="top"
        />

    <TextView
        android:id="@+id/poNameReview"
        android:layout_width="100dp"
        android:layout_height="19dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="34dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/nunito_sans_extrabold"
        android:text="@string/sempati_star"
        android:textAppearance="@style/middle_character"
        android:gravity="top"
        />

    <TextView
        android:id="@+id/poNumberReview"
        android:layout_width="90dp"
        android:layout_height="19dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="183dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/nunito_sans_extrabold"
        android:text="@string/p_1923_nm"
        android:textAppearance="@style/middle_character"
        android:gravity="top"
        />

    <TextView
        android:id="@+id/startDateReview"
        android:layout_width="82dp"
        android:layout_height="19dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="34dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="215dp"
        android:fontFamily="@font/nunito_sans_extrabold"
        android:text="@string/_23_juli_2020"
        android:textAppearance="@style/middle_character"
        android:gravity="top"
        />

    <ImageView
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="182dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="217dp"
        android:src="@drawable/ceklis"/>

    <TextView
        android:id="@+id/statusPembayaranReview"
        android:layout_width="43dp"
        android:layout_height="19dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="208dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="215dp"
        android:fontFamily="@font/nunito_sans_extrabold"
        android:text="Issued"
        android:textAppearance="@style/issued"
        android:gravity="top"
        />

    <TextView
        android:id="@+id/please_give"
        android:layout_width="203dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="70dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="268dp"
        android:fontFamily="@font/lato"
        android:text="@string/please_give_your_rating"
        android:textAppearance="@style/mini_character"
        android:lineSpacingExtra="10sp"
        android:translationY="-4.8sp"
        android:gravity="center_horizontal|top"
        />

    <ImageView
        android:id="@+id/star1"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="290dp"
        android:layout_marginLeft="94dp"
        android:gravity="top"
        android:src="@drawable/starrating"/>

    <ImageView
        android:id="@+id/star2"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="290dp"
        android:layout_marginLeft="127dp"
        android:gravity="top"
        android:src="@drawable/starrating"/>

    <ImageView
        android:id="@+id/star3"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="290dp"
        android:layout_marginLeft="160dp"
        android:gravity="top"
        android:src="@drawable/starrating"/>

    <ImageView
        android:id="@+id/star4"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="290dp"
        android:layout_marginLeft="193dp"
        android:gravity="top"
        android:src="@drawable/starrating"/>

    <ImageView
        android:id="@+id/star5"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="290dp"
        android:layout_marginLeft="226dp"
        android:gravity="top"
        android:src="@drawable/starrating"/>

    <TextView
        android:id="@+id/rate_this"
        android:layout_width="111dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="325dp"
        android:layout_marginLeft="116dp"
        android:layout_marginBottom="18dp"
        android:fontFamily="@font/nunito_sans_extrabold"
        android:text="Rate This Trip"
        android:textAllCaps="true"
        android:textAppearance="@style/sempati_sta"
        android:lineSpacingExtra="9sp"
        android:translationY="4.45sp"
        android:gravity="center_horizontal|top"
        />


</RelativeLayout>